<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result"
    android:orientation="vertical"
    android:background="#212121"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultScreenActivity">

    <TextView
        android:id="@+id/result_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/result_label_text"
        android:textColor="#FFFFFF "
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tgm_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:textColor="#BDBDBD  "
        android:text="@string/result_link_text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/result_button_text"
        android:backgroundTint="#2196F3" />
</LinearLayout>